Adding to main page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,6 +72,17 @@
     position: relative;
   }
 
+  /* main2 {
+    width: 100%;
+    min-height: 100%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding: 1rem;
+    box-sizing: inherit;
+    position: relative;
+  } */
+
   .angular-logo {
     max-width: 9.2rem;
   }
@@ -226,7 +237,7 @@
         </defs>
       </svg>
       <h1>Hello, {{ title }}</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
+      <p>Wellcome to our store Hilux</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
@@ -321,6 +332,25 @@
         </a>
       </div>
     </div>
+  </div>
+</main>
+<main>
+  <div>
+    <h1 class="content h1">
+      Our products are the best
+    </h1>
+    <div class="content">
+      <p>
+        We have the best products in the world. Buy our products and you will be happy.
+      </p>
+    </div>
+  </div>
+</main>
+<main>
+  <div class="right-side">
+    <h2>
+      Our products
+    </h2>
   </div>
 </main>
 
