--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -349,8 +349,11 @@
 <main>
   <div class="right-side">
     <h2>
-      Our products
+      Our products:
     </h2>
+  </div>
+  <div>
+	Oil for face!
   </div>
 </main>
 
