changing some styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -237,7 +237,7 @@
         </defs>
       </svg>
       <h1>Hello, {{ title }}</h1>
-      <p>Wellcome to our store Hilux</p>
+      <p>Welcome to our store Hilux</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
@@ -337,7 +337,7 @@
 <main>
   <div>
     <h1 class="content h1">
-      Our products are the best
+      Our products are the best!
     </h1>
     <div class="content">
       <p>
@@ -349,7 +349,7 @@
 <main>
   <div class="right-side">
     <h2>
-      Our products
+      
     </h2>
   </div>
 </main>
